# audacity-cmake

./: CMakeLists.txt  readme.rst
cmake/: FindFlac.cmake  FindFlacXX.cmake
src/: CMakeLists.txt
